[gd_scene load_steps=5 format=3 uid="uid://xao1kchwqpdj"]

[ext_resource type="Script" path="res://Scripts/menu/main_menu.gd" id="1_42ivv"]
[ext_resource type="PackedScene" uid="uid://ctbick08lhn73" path="res://main.tscn" id="2_tscsu"]
[ext_resource type="PackedScene" uid="uid://dlbm5koe3uj84" path="res://Scenes/menus/options_menu.tscn" id="3_tbr1c"]
[ext_resource type="Texture2D" uid="uid://br10ejdxtpxv8" path="res://Assets/Images/a-few-minutes-late.png" id="4_i7xst"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_42ivv")
game_scene = ExtResource("2_tscsu")
option_scene = ExtResource("3_tbr1c")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("4_i7xst")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -209.0
offset_top = -62.5
offset_right = 209.0
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2

[node name="PlayBtn" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Play"

[node name="OptionBtn" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Options"

[node name="QuitBtn" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[connection signal="button_down" from="VBoxContainer/PlayBtn" to="." method="_on_play_btn_button_down"]
[connection signal="button_down" from="VBoxContainer/OptionBtn" to="." method="_on_option_btn_button_down"]
[connection signal="button_down" from="VBoxContainer/QuitBtn" to="." method="_on_quit_btn_button_down"]
